# pydate_generator

./: LICENSE  README.md  pyproject.toml
src/pydate_generator/: __init__.py  _version.py  pydate_generator.py
tests/: test.py  test_pydate_generator.py
