[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8.0"]
#requires = ["setuptools>=60"]
build-backend = "setuptools.build_meta"


[project]
name = "pydate_generator"
authors = [
    {name = "rina0uchi", email="34464831+rina0uchi@users.noreply.github.com"}
]
dynamic = ["version"]
description = "Generate a sequence of dates that includes the start and end dates."
readme = "README.md"
requires-python = ">=3.12.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent", 
]


[project.urls]
Homepage = "https://github.com/rina0uchi/pydate_generator"
Issues  = "https://github.com/rina0uchi/pydate_generator/issues"


[project.optional-dependencies]
dev = [
    "datetime"
]


[tool.setuptools]
package-dir = {"" = "src"}


[tool.setuptools_scm]
version_file = "src/pydate_generator/_version.py"
write_to = "src/pydate_generator/_version.py"
version_scheme = "python-simplified-semver"
local_scheme = "no-local-version"